--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     color:#162f56 ;
 }
 .bglightBlue{
-    color: #2b84ea;
+    background-color: #2b84ea;
 }
 .textlightBlue500{
     color: #0b72e7;
