--- a/main.css
+++ b/main.css
@@ -8,8 +8,19 @@
     color:#162f56 ;
 }
 .bglightBlue{
-    background-color: #2b84ea;
+    color: #2b84ea;
 }
 .textlightBlue500{
     color: #0b72e7;
 }
+.textgrayText{
+    color:#818597 ;
+}
+.textgreenLight{
+   color: #61cea6; 
+}
+.bggreenLight{
+    background-color: #61cea6;
+}
+
+
